--- a/project-root/contact.html
+++ b/project-root/contact.html
@@ -26,7 +26,8 @@
           <li><a href="index.html">New</a></li>
           <li><a href="shop.html">Shop</a></li>
           <li><a href="explore.html">Explore</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="sale.html">Sale</a></li>
+           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
 <div class="cart-wrap">
