--- a/project-root/sale.html
+++ b/project-root/sale.html
@@ -3,11 +3,18 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="Guzo Ave — Sale items, discounted and limited-time offers." />
-  <title>Sale — Guzo Ave</title>
+  <meta name="description" content="Guzo Ave — Minimal luxury. Curated pieces with editorial photography." />
+  <title>Guzo Ave — Modern Minimal Fashion</title>
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+
   <link rel="icon" href="assets/images/favicon.ico" />
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
+
 <body>
   <!-- HEADER -->
   <header class="site-header" role="banner">
@@ -19,17 +26,16 @@
           <li><a href="index.html">New</a></li>
           <li><a href="shop.html">Shop</a></li>
           <li><a href="explore.html">Explore</a></li>
-          <li><a href="sale.html" aria-current="page">Sale</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="sale.html">Sale</a></li>
+           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
-
-      <div class="cart-wrap">
-        <a class="cart-btn" href="checkout.html" style="display:flex; align-items:center; gap:0.4rem;">
-          <span id="cartCount">0</span>
-          <img src="assets/images/shopping-bag.jpg" alt="Shopping Bag" style="width:24px; height:24px;">
-        </a>
-      </div>
+<div class="cart-wrap">
+  <a class="cart-btn" href="checkout.html" style="display:flex; align-items:center; gap:0.4rem;">
+    <img src="assets/images/shopping-bag.jpg" alt="Shopping Bag" style="width:24px; height:24px;">
+  </a>
+</div>
+    
     </div>
   </header>
 
